--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,7 +1,11 @@
-$header-bg: rgb(0, 78, 151);
-$main-bg: rgb(143, 195, 255);
-$sidebar-bg: rgb(62, 126, 179);
-
 $header-font: "lora";
 $text-font: "Roboto";
+
+$header-bg: rgb(0, 78, 151);
+$main-bg: rgb(185, 217, 253);
+$sidebar-bg: rgb(130, 169, 201);
+
+$header-font-color: #fff;
+$primary-font-color: rgb(37, 37, 37);
+
 
