--- a/src/Content.css
+++ b/src/Content.css
@@ -3,6 +3,27 @@
   display: grid;
   -ms-grid-columns: 70% 30%;
       grid-template-columns: 70% 30%;
-  height: 400px;
+}
+
+@media only screen and (max-width: 800px) {
+  .Content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media only screen and (min-width: 1400px) {
+  .Content {
+    -ms-grid-columns: 80% 20%;
+        grid-template-columns: 80% 20%;
+  }
 }
 /*# sourceMappingURL=Content.css.map */
