--- a/src/Header.css
+++ b/src/Header.css
@@ -6,18 +6,19 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  height: 50px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #004e97;
+  height: 70px;
   padding: 0 30px;
+  background-color: #004e97;
 }
 
 header h1 {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+  color: #fff;
 }
 
 header button, header input {
