--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,5 +1,27 @@
 .Sidebar {
-  background: #3e7eb3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background: #82a9c9;
   padding: 0 30px;
+}
+
+.Sidebar li {
+  list-style-type: none;
+}
+
+.Sidebar ul {
+  padding: 0;
+}
+
+@media only screen and (max-width: 800px) {
+  .Sidebar ul {
+    -webkit-column-count: 2;
+            column-count: 2;
+  }
 }
 /*# sourceMappingURL=Sidebar.css.map */
