--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,10 +1,13 @@
+// font styles
 $header-font: "lora";
 $text-font: "Roboto";
 
+// background color
 $header-bg: rgb(0, 78, 151);
 $main-bg: rgb(185, 217, 253);
 $sidebar-bg: rgb(130, 169, 201);
 
+// font color
 $header-font-color: #fff;
 $primary-font-color: rgb(37, 37, 37);
 
