--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@ h1, h2, h3 {
   font-family: $header-font;
 }
 
+// remove side margins on narrow view
 @media only screen and (max-width: 1000px) {
   .App {
       margin: 0;
