--- a/src/styles/Content.scss
+++ b/src/styles/Content.scss
@@ -1,4 +1,4 @@
-@import './mixins';
+@import '../mixins.scss';
 
 .Content {
     display: grid;
@@ -15,6 +15,6 @@
 // change grid to flex column for mobile view
 @media only screen and (max-width: 800px) {
         .Content {
-            @include content-column();
+            @include content-column-reverse();
         }
     };
