--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -6,22 +6,25 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background: #82a9c9;
-  padding: 0 30px;
-}
-
-.Sidebar li {
-  list-style-type: none;
-}
-
-.Sidebar ul {
-  padding: 0;
 }
 
 @media only screen and (max-width: 800px) {
-  .Sidebar ul {
-    -webkit-column-count: 2;
-            column-count: 2;
+  .Sidebar {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
 }
 /*# sourceMappingURL=Sidebar.css.map */
