--- a/src/styles/Sidebar.scss
+++ b/src/styles/Sidebar.scss
@@ -1,21 +1,18 @@
-@import './variables';
+@import '../variables';
 
 .Sidebar {
     display: flex;
     flex-direction: column;
+    align-items: center;
     background: $sidebar-bg;
-    padding: 0 30px;
-    li {
-        list-style-type: none;
-    }
-    ul{
-        padding: 0;
-    }
 }
 
 // mobile view makes 2 cols for the list.
 @media only screen and (max-width: 800px) {
-    .Sidebar ul {
-        column-count: 2;
+    .Sidebar {
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        flex-wrap: wrap
     }
 };
